--- a/Lend_Page/lend.css
+++ b/Lend_Page/lend.css
@@ -5,13 +5,48 @@
     margin-right: 2%;
 }
 #filter{
-    width: 20%;
+    /* width: 20%; */
     margin-bottom: 6px;
     border: 1px solid rgb(237, 231, 231);
 }
+#sorting{
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+}
+#select{
+    border: 1px solid black;
+    padding-left: 40px;
+    background-color: rgb(242, 238, 238);
+    padding-right: 40px;
+    text-align: center;
+    border-radius: 25px;
+}
+#sortCont22{
+    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    grid-template-rows: auto;
+}
+#container1>div{
+    display: flex;
+    gap: 50px;
+    margin-bottom: 20px;
+}
+#main_container{
+    display: flex;
+    gap:20px;
+    /* display: grid;
+    /* justify-content: space-between; */
+    /* margin: 20px; */
+    /* grid-template-columns: repeat(2,1fr);
+    grid-template-rows: auto; */ 
+}
 #main_filter{
+    width: 24%;
     margin-left: 30px;
-    margin-top: 60px;
+    margin-right: 4%;
+    margin-top: -15px;
    
 }
 #src{
