--- a/home.css
+++ b/home.css
@@ -25,3 +25,125 @@
   width: 120px;
   margin-right: 45px;
 }
+
+
+
+.banner-section {
+  width: 100%;
+  height: 100vh;
+  /* border: 2px solid red; */
+  background-image: url(https://cimages.milaap.org/milaap/image/upload/v1655996033/production/entity_details/milaap_page/524/Desktop_img_2__5__1655996032.jpg);
+  background-position: right 0 top -50px;
+  background-repeat: no-repeat;
+  display: flex;
+}
+.banner-content {
+  width: 80%;
+  height: auto;
+  margin: auto;
+  /* border: 2px solid red; */
+  /* background-color: white; */
+  border-radius: 6px;
+}
+.banner-numbers {
+  width: 100%;
+  height: 70px;
+  margin: auto;
+  margin-top: 50px;
+  /* border: 2px solid red; */
+  /* background-color: white; */
+  border-radius: 6px;
+  display: flex;
+}
+.branding-strip {
+  width: 100%;
+  height: 70px;
+  margin: auto;
+  margin-top: 50px;
+  /* border: 2px solid red; */
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-image: linear-gradient(to right, #bf6983, #ffffff);
+}
+.download-app-container {
+  width: 70%;
+  height: 450px;
+  margin: auto;
+  border: 2px solid green;
+  border-radius: 10px;
+}
+.request-callback {
+  width: 100%;
+  height: 200px;
+  background-color: aliceblue;
+  padding: 29px 0;
+}
+.camp-lead-create {
+  width: 80%;
+  height: 100px;
+  margin: auto;
+  background-color: white;
+  border-radius: 6px;
+}
+.container-box {
+  width: 100%;
+  height: auto;
+  margin: auto;
+  /* border: 2px solid blue; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-banner-text {
+  font-size: 20px;
+  margin-bottom: 12px;
+  line-height: 27px;
+  margin-top: 35px;
+  width: 40%;
+  color: #212121;
+  font-family: AvenirLTPro-Book;
+}
+a,
+button {
+  text-decoration: none;
+  font-size: 16px;
+  font-family: AvenirLTPro-Book;
+  list-style: none;
+}
+
+.start-btn {
+  padding: 8px 16px;
+  border-radius: 25px;
+  background-color: #9c3353;
+  border: 2px solid #9c3353;
+  font-size: 20px;
+  color: white;
+  margin-top: 50px;
+}
+.number-section {
+  width: 16%;
+  height: auto;
+  /* border: 1px solid blue; */
+  padding-left: 20px;
+}
+.number {
+  font-size: 20px;
+  color: #691a47;
+}
+.number-text {
+  font-size: 20px;
+  color: #5d5d5d;
+}
+.seprator {
+  border-left: 1px solid #e5e5e5;
+  border-color: #ffc1d3;
+}
+.branding-text {
+  width: 42%;
+  height: 50px;
+  margin: auto;
+  /* border: 2px solid yellow; */
+}
