--- a/navbar/headers.css
+++ b/navbar/headers.css
@@ -1,12 +1,16 @@
 
 #navbar{
-   background-color: aqua;
+   /* background-color: aqua; */
+   background-color: white;
+   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    display: flex;
    /* justify-content: space-between; */
    height: 65px;
    align-items: center;
    padding-right: 30px;
    padding-left: 10px;
+   position: sticky;
+   top: 0px;
 }
 #homeimg{
    height: 40px;
@@ -14,10 +18,12 @@
 }
 #right>a{
    height: 100%;
+   color: grey;
    /* width: 100px; */
 }
 a{
    text-decoration: none;
+   color:black;
 }
 
 #left{
@@ -26,16 +32,14 @@ a{
    margin-left: 50px;
    margin-right: 270px;
    width: 35%;
-   /* background-color: burlywood; */
 }
-#left>a{
-   /* margin-right: 40px; */
-   /* text-decoration: none; */
+#reg{
    cursor: pointer;
    
 }
+
 #left>h3>a:hover{
-   background-color:red;
+   background-color:rgb(194, 190, 190);
    height: 165px;
 }
 #reg{
@@ -53,4 +57,32 @@ button{
    border-radius: 55px;
    border-color: #9c3353;
    cursor: pointer;
+}
+#popup{
+   visibility: hidden;
+   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+   height: 40px;
+   width: 100px;
+   align-items: center;
+   text-align: center;
+   margin-right: 5px;
+   margin-left: 1180px;
+   
+   position: sticky;
+   top:70px ;
+   right: 10px;
+   padding-right: 10px;
+   padding-left: 10px;
+   display: flex;
+   justify-content: space-between;
+   color: white;
+   
+}
+#popup>a{
+   color: #9c3353;
+}
+
+#n{
+   background-color: white;
+   height: 1700px;
 }
