--- a/signup/login.css
+++ b/signup/login.css
@@ -14,6 +14,8 @@ body{
    border-radius: 20px;
 }
 #box1{
+    display: flex;
+    flex-direction: column;
     align-items: center;
     width: 25%;
     /* background-color: blue; */
@@ -21,9 +23,21 @@ body{
     align-items: center;
     text-align: center;
 }
-#box1>img{
-    height: 120px;
+#box1>h3{
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+#imgdiv>img{
+    height: 110px;
+    /* border-radius: 100%; */
+}
+#imgdiv{
+    /* border:1px solid red; */
+    background-color: blue;
+    height: 80px;
+    width:50px;
     border-radius: 100%;
+    margin-bottom: 10px;
 }
 #box2{
     display: grid;
