--- a/home.css
+++ b/home.css
@@ -4,7 +4,7 @@
 }
 
 .banner-section {
-  width: 100%;
+  /* width: 96%; */
   height: 100vh;
   /* border: 2px solid red; */
   background-image: url(https://cimages.milaap.org/milaap/image/upload/v1655996033/production/entity_details/milaap_page/524/Desktop_img_2__5__1655996032.jpg);
