--- a/Lend_Page/lend.css
+++ b/Lend_Page/lend.css
@@ -28,6 +28,22 @@
     grid-template-columns: repeat(1,1fr);
     grid-template-rows: auto;
 }
+#basket44{
+    padding: 20px;
+}
+#pay22{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 63%;
+    border: 1px solid white;
+    border-radius: 28px;
+     cursor: pointer;
+    color: white;
+    padding: 15px 40px;
+    /* font-size: 18px; */
+    font-weight: bolder;
+    background-color: #9c3963;
+}
 #container1>div{
     display: flex;
     gap: 50px;
@@ -36,6 +52,9 @@
 #main_container{
     display: flex;
     gap:20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    position: absolute;
     /* display: grid;
     /* justify-content: space-between; */
     /* margin: 20px; */
