--- a/Lend_Page/lend.css
+++ b/Lend_Page/lend.css
@@ -5,13 +5,13 @@
     margin-right: 2%;
 }
 #filter{
-    /* width: 20%; */
     margin-bottom: 6px;
     border: 1px solid rgb(237, 231, 231);
 }
 #sorting{
     display: flex;
     justify-content: flex-end;
+    height: 30px;
     gap: 20px;
 }
 #select{
