--- a/component/headers.css
+++ b/component/headers.css
@@ -47,11 +47,12 @@ a{
    width: 70px;
    height: 100%;
 }
-button{
+#raiser22{
    background-color: #9c3353;
    color: white;
    margin-right: 100px;
-   /* height:70%; */
+   margin-bottom: 20px;
+   height: 70%;
    font-size:16px;
    width: 220px;
    font-weight: bold;
