--- a/donate.css
+++ b/donate.css
@@ -1,6 +1,10 @@
 body{
     background-color: rgb(250, 241, 242);
 }
+.container{
+    width:90%;
+    margin: auto;
+}
 #big{
     width: 90%;
     margin: auto;
@@ -29,7 +33,7 @@ body{
     width: 16%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 } 
-#cards,#dog{
+#cards,#dog,#card2{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     width: 90%;
@@ -42,17 +46,13 @@ body{
     box-shadow: rgba(252, 109, 109, 0.35) 0px 5px 15px;
     text-align: center;
 }
+
 .img{
     height: 65%;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    text-align: center;
-}
-.img{
-    height: 70%;
     width: 100%;
     border-radius: 8px 8px 0 0;
 }
-#cr{
+.cr{
     display: flex;
     gap: 15px;
     width: 80%;
@@ -112,4 +112,89 @@ body{
     font-size: 20px;
     color: white;
     cursor: pointer;
+}
+#nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    margin: auto;
+    font-size: 20px;
+    box-shadow: rgba(252, 109, 109, 0.35) 0px 5px 15px;
+}
+#nav>h3{
+    margin-right: 50%;
+}
+#nav>div>img{
+    height: 50px;
+    width: 140px;
+}
+span{
+    color: rgb(21, 165, 21);
+}
+#medical{
+    display: block;
+    width: 35%;
+    height: 150px;
+    padding: 18px;
+    margin: auto;
+    margin-top: 50px;
+    display: grid;
+    box-shadow: rgba(252, 109, 109, 0.35) 0px 5px 15px;
+    grid-template-columns: repeat(2,1fr);
+    border-radius: 9px;
+}
+#medical>div{
+    width: 80%;
+    margin: auto;
+    padding: 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+#par{
+    text-align: center;
+    margin-top: 50px;
+    word-spacing: 5px;
+    font-size: 20px;
+}
+#pa{font-size: 23px;}
+#detail{
+    width: 30%;
+    margin: auto;
+    display: block;
+    margin-top: 70px;
+}
+#detail>input{
+    width: 100%;
+    border: none;
+    padding: 15px;
+    font-size: 16px;
+    margin: auto;
+    margin-top: 8px;
+    border-radius: 9px;
+}
+
+#sub{
+    width: 65%;
+    height: 100px;
+    margin: auto;
+    border-radius: 8px 8px 0 0;
+    margin-top: 50px;
+    background-image: url("https://assets.milaap.org/packs/_/assets/images/home/floral-63b2cb34226ab4606c8743991d786df0.png");
+    background-color: rgba(128, 0, 0, 0.931)
+}
+#submit{
+    margin-left: 15px;
+    padding: 12px;
+    border-radius: 40px;
+    border: none;
+    width: 24%;
+    cursor: pointer;
+    position: relative;
+    left: 70%;
+    top: 20%;
 }
