--- a/styles/price.css
+++ b/styles/price.css
@@ -309,7 +309,7 @@
   text-align: left;
   font-size: 15px;
   text-align: left;
-
+   color: rgb(131, 105, 105);
   padding-top: 10px ;
   padding-bottom: 10px;
   background-color: transparent;
