--- a/donate.css
+++ b/donate.css
@@ -33,7 +33,7 @@ body{
     width: 16%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 } 
-#cards,#dog{
+#cards,#dog,#card2{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     width: 90%;
@@ -52,7 +52,7 @@ body{
     width: 100%;
     border-radius: 8px 8px 0 0;
 }
-#cr{
+.cr{
     display: flex;
     gap: 15px;
     width: 80%;
