--- a/styles/contact.css
+++ b/styles/contact.css
@@ -183,35 +183,39 @@ iframe {
   border-radius: 5px;
   border: 1px solid whitesmoke;
 }
-#send {
+#send{
   width: 85%;
   margin: 10px auto;
+ }
+
+#send > button{
+   width: 220px;
+   height: 50px;
+   border-radius: 30px;
+   background-color: #9C3353;
+   margin: 5px 0 5px 0;
+   border: transparent;
+   font-size: 20px;
+   color : white;
 }
-#send > button {
-  width: 220px;
-  height: 50px;
-  border-radius: 30px;
-  background-color: #9c3353;
-  margin: 5px 0 5px 0;
-  border: transparent;
-  font-size: 20px;
-  color: white;
+
+#scontainer{
+   width: 85%;
+   margin: 5px auto;
+   background-color : #e0ffc7;
+
+ }
+
+.divb{
+   width: 100%;
+   padding: 30px 0 30px 0;
+   display: flex;
+   margin: auto;
+    align-items: center;
+   background-color : #e0ffc7;
+   border-radius: 10px;
+   border: 1px solid gray ;
 }
-#scontainer {
-  width: 85%;
-  margin: 5px auto;
-  background-color: #e0ffc7;
-}
-.divb {
-  width: 100%;
-  padding: 30px 0 30px 0;
-  display: flex;
-  margin: auto;
-  align-items: center;
-  background-color: #e0ffc7;
-  border-radius: 10px;
-  border: 1px solid gray;
-}
-.divb > h3 {
-  margin-left: 50px;
+.divb > h3{
+   margin-left: 50px;
 }
