--- a/styles/price.css
+++ b/styles/price.css
@@ -130,6 +130,7 @@
   justify-content: center;
   align-items: center;
   gap: 20%;
+  
 }
 
 .calcontainer > div:nth-child(1) {
@@ -140,7 +141,10 @@
   align-items: center;
   color: whitesmoke;
   margin: 50px 0px 20px 0px;
+  background: transparent;
 }
+
+
 
 .calcontainer > div:nth-child(2) {
   text-align: center;
@@ -155,12 +159,14 @@
 
 .breakup > p {
   line-height: 1cm;
+  background: transparent;
 }
 
 .breakup {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: transparent;
 }
 
 /* ************************ */
